deploy: QuantumPL/site@286081e30eade825d64fc596bbebdc1a640f5be3

--- a/publication/Singhal2020/index.html
+++ b/publication/Singhal2020/index.html
@@ -110,7 +110,7 @@ January 2020
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Singhal2020/cite.bib>
 Cite
 </a>
-<a class="btn btn-outline-primary btn-page-header" href=http://ks.cs.uchicago.edu/publication/verified-translation/ target=_blank rel=noopener>
+<a class="btn btn-outline-primary btn-page-header" href=https://ks.cs.uchicago.edu/publication/verified-translation/ target=_blank rel=noopener>
 URL
 </a>
 </div>
