--- a/publication/index.html
+++ b/publication/index.html
@@ -539,7 +539,7 @@ Cite
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2012.02154 target=_blank rel=noopener>
 arXiv
 </a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=http://ks.cs.uchicago.edu/publication/qhtt-masters/ target=_blank rel=noopener>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ks.cs.uchicago.edu/publication/qhtt-masters/ target=_blank rel=noopener>
 URL
 </a>
 </div>
@@ -820,10 +820,7 @@ Cite
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4204/EPTCS.340.15 target=_blank rel=noopener>
 DOI
 </a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2109.02198 target=_blank rel=noopener>
-arXiv
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=http://ks.cs.uchicago.edu/publication/qhtt/ target=_blank rel=noopener>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ks.cs.uchicago.edu/publication/qhtt/ target=_blank rel=noopener>
 URL
 </a>
 </div>
@@ -858,9 +855,6 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4204/EPTCS.340.14 target=_blank rel=noopener>
 DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2109.02197 target=_blank rel=noopener>
-arXiv
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://rand.cs.uchicago.edu/publication/rand-2020-gottesman/ target=_blank rel=noopener>
 URL
@@ -927,7 +921,7 @@ We describe the ongoing development of a verified translator between OpenQASM (O
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Singhal2020/cite.bib>
 Cite
 </a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=http://ks.cs.uchicago.edu/publication/verified-translation/ target=_blank rel=noopener>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ks.cs.uchicago.edu/publication/verified-translation/ target=_blank rel=noopener>
 URL
 </a>
 </div>
@@ -1981,6 +1975,37 @@ DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/Qiskit/qiskit target=_blank rel=noopener>
 URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-5 year-2017">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Coecke2017/>Picturing Quantum Processes: A First Course in Quantum Theory and Diagrammatic Reasoning</a>
+</div>
+<a href=/bib/publication/Coecke2017/ class=summary-link>
+<div class=article-style>
+The unique features of the quantum world are explained in this book through the language of diagrams, setting out an innovative visual …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Bob-Coecke/>Bob Coecke</a></span>, <span>
+<a href=/bib/author/Aleks-Kissinger/>Aleks Kissinger</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Coecke2017/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1017/9781316219317 target=_blank rel=noopener>
+DOI
 </a>
 </div>
 </div>
@@ -3077,37 +3102,6 @@ DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/0808.1023 target=_blank rel=noopener>
 arXiv
-</a>
-</div>
-</div>
-<div class=ml-3>
-</div>
-</div>
-</div>
-<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2008">
-<div class="media stream-item">
-<div class=media-body>
-<div class="section-subheading article-title mb-0 mt-0">
-<a href=/bib/publication/Coecke2008/>Interacting Quantum Observables</a>
-</div>
-<a href=/bib/publication/Coecke2008/ class=summary-link>
-<div class=article-style>
-We formalise the constructive content of an essential feature of quantum mechanics: the interaction of complementary quantum …
-</div>
-</a>
-<div class="stream-meta article-metadata">
-<div>
-<span>
-<a href=/bib/author/Bob-Coecke/>Bob Coecke</a></span>, <span>
-<a href=/bib/author/Ross-Duncan/>Ross Duncan</a></span>
-</div>
-</div>
-<div class=btn-links>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Coecke2008/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/978-3-540-70583-3_25 target=_blank rel=noopener>
-DOI
 </a>
 </div>
 </div>
