--- a/publication/Singhal2020b/index.html
+++ b/publication/Singhal2020b/index.html
@@ -111,7 +111,7 @@ Cite
 <a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/2012.02154 target=_blank rel=noopener>
 arXiv
 </a>
-<a class="btn btn-outline-primary btn-page-header" href=http://ks.cs.uchicago.edu/publication/qhtt-masters/ target=_blank rel=noopener>
+<a class="btn btn-outline-primary btn-page-header" href=https://ks.cs.uchicago.edu/publication/qhtt-masters/ target=_blank rel=noopener>
 URL
 </a>
 </div>
