deploy: QuantumPL/site@f2a42ce6508d0da47e5697b43be8fa2d318d9ef6

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Quickly discover relevant papers by <a href=./publication/>filtering publication
 <a href=/bib/author/Christophe-Chareton/>Christophe Chareton</a></span>, <span>
 <a href=/bib/author/Sebastien-Bardin/>Sébastien Bardin</a></span>, <span>
 <a href=/bib/author/Dongho-Lee/>Dongho Lee</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>, <span>
 <a href=/bib/author/Renaud-Vilmart/>Renaud Vilmart</a></span>, <span>
 <a href=/bib/author/Zhaowei-Xu/>Zhaowei Xu</a></span>
 </span>
@@ -146,6 +146,26 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2109.06493 target=_blank rel=noopener>
 arXiv
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
+<a href=/bib/author/Kostia-Chardonnet/>Kostia Chardonnet</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>, <span>
+<a href=/bib/author/Renaud-Vilmart/>Renaud Vilmart</a></span>
+</span>
+(2021).
+<a href=/bib/publication/Chardonnet2021/>Geometry of Interaction for ZX-Diagrams</a>.
+<em>46th International Symposium on Mathematical Foundations of Computer Science (MFCS 2021)</em>.
+<p>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Chardonnet2021/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4230/LIPIcs.MFCS.2021.30 target=_blank rel=noopener>
+DOI
 </a>
 </p>
 </div>
@@ -210,31 +230,6 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/AnthonyBordg/Isabelle_marries_Dirac target=_blank rel=noopener>
-URL
-</a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
-<a href=/bib/author/Kesha-Hietala/>Kesha Hietala</a></span>, <span>
-<a href=/bib/author/Robert-Rand/>Robert Rand</a></span>, <span>
-<a href=/bib/author/Shih-Han-Hung/>Shih-Han Hung</a></span>, <span>
-<a href=/bib/author/Liyi-Li/>Liyi Li</a></span>, <span>
-<a href=/bib/author/Michael-Hicks/>Michael Hicks</a></span>
-</span>
-(2021).
-<a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a>.
-<em>12th International Conference on Interactive Theorem Proving (ITP 2021)</em>.
-<p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Hietala2021a/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4230/LIPIcs.ITP.2021.21 target=_blank rel=noopener>
-DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/inQWIRE/SQIR target=_blank rel=noopener>
 URL
 </a>
 </p>
