--- a/publication/Chareton2021/index.html
+++ b/publication/Chareton2021/index.html
@@ -102,7 +102,7 @@
 <a href=/bib/author/Sebastien-Bardin/>Sébastien Bardin</a></span>, <span>
 <a href=/bib/author/Francois-Bobot/>François Bobot</a></span>, <span>
 <a href=/bib/author/Valentin-Perrelle/>Valentin Perrelle</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>
 </div>
 <span class=article-date>
 March 2021
