--- a/publication/Green2013/index.html
+++ b/publication/Green2013/index.html
@@ -102,7 +102,7 @@
 <a href=/bib/author/Peter-LeFanu-Lumsdaine/>Peter LeFanu Lumsdaine</a></span>, <span>
 <a href=/bib/author/Neil-J.-Ross/>Neil J. Ross</a></span>, <span>
 <a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>
 </div>
 <span class=article-date>
 June 2013
