--- a/publication/index.html
+++ b/publication/index.html
@@ -182,7 +182,7 @@ While recent progress in quantum hardware open the door for significant speedup 
 <a href=/bib/author/Christophe-Chareton/>Christophe Chareton</a></span>, <span>
 <a href=/bib/author/Sebastien-Bardin/>Sébastien Bardin</a></span>, <span>
 <a href=/bib/author/Dongho-Lee/>Dongho Lee</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>, <span>
 <a href=/bib/author/Renaud-Vilmart/>Renaud Vilmart</a></span>, <span>
 <a href=/bib/author/Zhaowei-Xu/>Zhaowei Xu</a></span>
 </div>
@@ -223,6 +223,38 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://dalspace.library.dal.ca/handle/10222/80771 target=_blank rel=noopener>
 URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Chardonnet2021/>Geometry of Interaction for ZX-Diagrams</a>
+</div>
+<a href=/bib/publication/Chardonnet2021/ class=summary-link>
+<div class=article-style>
+ZX-Calculus is a versatile graphical language for quantum computation equipped with an equational theory. Getting inspiration from …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Kostia-Chardonnet/>Kostia Chardonnet</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>, <span>
+<a href=/bib/author/Renaud-Vilmart/>Renaud Vilmart</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Chardonnet2021/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4230/LIPIcs.MFCS.2021.30 target=_blank rel=noopener>
+DOI
 </a>
 </div>
 </div>
@@ -391,7 +423,7 @@ While recent progress in quantum hardware open the door for significant speedup 
 <a href=/bib/author/Sebastien-Bardin/>Sébastien Bardin</a></span>, <span>
 <a href=/bib/author/Francois-Bobot/>François Bobot</a></span>, <span>
 <a href=/bib/author/Valentin-Perrelle/>Valentin Perrelle</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>
 </div>
 </div>
 <div class=btn-links>
@@ -743,7 +775,7 @@ While recent progress in quantum hardware open the door for significant speedup 
 <a href=/bib/author/Sebastien-Bardin/>Sébastien Bardin</a></span>, <span>
 <a href=/bib/author/Francois-Bobot/>François Bobot</a></span>, <span>
 <a href=/bib/author/Valentin-Perrelle/>Valentin Perrelle</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>
 </div>
 </div>
 <div class=btn-links>
@@ -1634,7 +1666,7 @@ One perspective on quantum algorithms is that they are classical algorithms havi
 <div>
 <span>
 <a href=/bib/author/Amr-Sabry/>Amr Sabry</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>, <span>
 <a href=/bib/author/Juliana-Kaizer-Vizzotto/>Juliana Kaizer Vizzotto</a></span>
 </div>
 </div>
@@ -2285,7 +2317,7 @@ The Quipper language offers a unified general-purpose programming framework for 
 <div class="stream-meta article-metadata">
 <div>
 <span>
-<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>, <span>
 <a href=/bib/author/Neil-J.-Ross/>Neil J. Ross</a></span>, <span>
 <a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>, <span>
 <a href=/bib/author/D.-Scott-Alexander/>D. Scott Alexander</a></span>, <span>
@@ -2551,7 +2583,7 @@ Quipper is a recently developed programming language for expressing quantum comp
 <a href=/bib/author/Peter-LeFanu-Lumsdaine/>Peter LeFanu Lumsdaine</a></span>, <span>
 <a href=/bib/author/Neil-J.-Ross/>Neil J. Ross</a></span>, <span>
 <a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>
 </div>
 </div>
 <div class=btn-links>
@@ -2588,7 +2620,7 @@ The field of quantum algorithms is vibrant. Still, there is currently a lack of 
 <a href=/bib/author/Peter-LeFanu-Lumsdaine/>Peter LeFanu Lumsdaine</a></span>, <span>
 <a href=/bib/author/Neil-J.-Ross/>Neil J. Ross</a></span>, <span>
 <a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>
 </div>
 </div>
 <div class=btn-links>
@@ -2920,7 +2952,7 @@ We discuss the design of a typed lambda calculus for quantum computation. After 
 <div>
 <span>
 <a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>
 </div>
 </div>
 <div class=btn-links>
@@ -3256,7 +3288,7 @@ In this paper we develop a functional programming language for quantum computers
 <div>
 <span>
 <a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>
 </div>
 </div>
 <div class=btn-links>
