deploy: QuantumPL/site@7f2da62e40d037eb6d59d58d0d97514e05dd9e29

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Quickly discover relevant papers by <a href=./publication/>filtering publication
 <a href=/bib/author/Christophe-Chareton/>Christophe Chareton</a></span>, <span>
 <a href=/bib/author/Sebastien-Bardin/>Sébastien Bardin</a></span>, <span>
 <a href=/bib/author/Dongho-Lee/>Dongho Lee</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
 <a href=/bib/author/Renaud-Vilmart/>Renaud Vilmart</a></span>, <span>
 <a href=/bib/author/Zhaowei-Xu/>Zhaowei Xu</a></span>
 </span>
@@ -154,7 +154,7 @@ arXiv
 <span class="article-metadata li-cite-author">
 <span>
 <a href=/bib/author/Kostia-Chardonnet/>Kostia Chardonnet</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
 <a href=/bib/author/Renaud-Vilmart/>Renaud Vilmart</a></span>
 </span>
 (2021).
