--- a/publication/Chardonnet2021/index.html
+++ b/publication/Chardonnet2021/index.html
@@ -99,7 +99,7 @@
 <div>
 <span>
 <a href=/bib/author/Kostia-Chardonnet/>Kostia Chardonnet</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
 <a href=/bib/author/Renaud-Vilmart/>Renaud Vilmart</a></span>
 </div>
 <span class=article-date>
