--- a/publication/Chareton2021a/index.html
+++ b/publication/Chareton2021a/index.html
@@ -101,7 +101,7 @@
 <a href=/bib/author/Christophe-Chareton/>Christophe Chareton</a></span>, <span>
 <a href=/bib/author/Sebastien-Bardin/>Sébastien Bardin</a></span>, <span>
 <a href=/bib/author/Dongho-Lee/>Dongho Lee</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
 <a href=/bib/author/Renaud-Vilmart/>Renaud Vilmart</a></span>, <span>
 <a href=/bib/author/Zhaowei-Xu/>Zhaowei Xu</a></span>
 </div>
