--- a/publication/index.html
+++ b/publication/index.html
@@ -182,7 +182,7 @@ While recent progress in quantum hardware open the door for significant speedup 
 <a href=/bib/author/Christophe-Chareton/>Christophe Chareton</a></span>, <span>
 <a href=/bib/author/Sebastien-Bardin/>Sébastien Bardin</a></span>, <span>
 <a href=/bib/author/Dongho-Lee/>Dongho Lee</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
 <a href=/bib/author/Renaud-Vilmart/>Renaud Vilmart</a></span>, <span>
 <a href=/bib/author/Zhaowei-Xu/>Zhaowei Xu</a></span>
 </div>
@@ -245,7 +245,7 @@ ZX-Calculus is a versatile graphical language for quantum computation equipped w
 <div>
 <span>
 <a href=/bib/author/Kostia-Chardonnet/>Kostia Chardonnet</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
 <a href=/bib/author/Renaud-Vilmart/>Renaud Vilmart</a></span>
 </div>
 </div>
@@ -423,7 +423,7 @@ While recent progress in quantum hardware open the door for significant speedup 
 <a href=/bib/author/Sebastien-Bardin/>Sébastien Bardin</a></span>, <span>
 <a href=/bib/author/Francois-Bobot/>François Bobot</a></span>, <span>
 <a href=/bib/author/Valentin-Perrelle/>Valentin Perrelle</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
 </div>
 </div>
 <div class=btn-links>
@@ -775,7 +775,7 @@ While recent progress in quantum hardware open the door for significant speedup 
 <a href=/bib/author/Sebastien-Bardin/>Sébastien Bardin</a></span>, <span>
 <a href=/bib/author/Francois-Bobot/>François Bobot</a></span>, <span>
 <a href=/bib/author/Valentin-Perrelle/>Valentin Perrelle</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
 </div>
 </div>
 <div class=btn-links>
@@ -1666,7 +1666,7 @@ One perspective on quantum algorithms is that they are classical algorithms havi
 <div>
 <span>
 <a href=/bib/author/Amr-Sabry/>Amr Sabry</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
 <a href=/bib/author/Juliana-Kaizer-Vizzotto/>Juliana Kaizer Vizzotto</a></span>
 </div>
 </div>
@@ -2317,7 +2317,7 @@ The Quipper language offers a unified general-purpose programming framework for 
 <div class="stream-meta article-metadata">
 <div>
 <span>
-<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
 <a href=/bib/author/Neil-J.-Ross/>Neil J. Ross</a></span>, <span>
 <a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>, <span>
 <a href=/bib/author/D.-Scott-Alexander/>D. Scott Alexander</a></span>, <span>
@@ -2583,7 +2583,7 @@ Quipper is a recently developed programming language for expressing quantum comp
 <a href=/bib/author/Peter-LeFanu-Lumsdaine/>Peter LeFanu Lumsdaine</a></span>, <span>
 <a href=/bib/author/Neil-J.-Ross/>Neil J. Ross</a></span>, <span>
 <a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
 </div>
 </div>
 <div class=btn-links>
@@ -2620,7 +2620,7 @@ The field of quantum algorithms is vibrant. Still, there is currently a lack of 
 <a href=/bib/author/Peter-LeFanu-Lumsdaine/>Peter LeFanu Lumsdaine</a></span>, <span>
 <a href=/bib/author/Neil-J.-Ross/>Neil J. Ross</a></span>, <span>
 <a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
 </div>
 </div>
 <div class=btn-links>
@@ -2952,7 +2952,7 @@ We discuss the design of a typed lambda calculus for quantum computation. After 
 <div>
 <span>
 <a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
 </div>
 </div>
 <div class=btn-links>
@@ -3288,7 +3288,7 @@ In this paper we develop a functional programming language for quantum computers
 <div>
 <span>
 <a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>, <span>
-<a href=/bib/author/Benoit-Valiron/>Beno^it Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
 </div>
 </div>
 <div class=btn-links>
