--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -303,6 +303,12 @@ This paper gives an introduction to and overview of the functional quantum progr
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Vizzotto2009/>Reasoning about General Quantum Programs over Mixed States</a></h2>
+<div class=article-style>
+In this work we present a functional programming language for quantum computation over mixed states. More interestingly, we develop a set of equations for the resulting programming language, proposing the first framework for equational reasoning …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Altenkirch2005/>A Functional Quantum Programming Language</a></h2>
 <div class=article-style>
 We introduce the language QML, a functional language for quantum computations on finite types. Its design is guided by its categorical semantics: QML programs are interpreted by morphisms in the category FQC of finite quantum computations, which …
