--- a/publication/Rennela2018/index.html
+++ b/publication/Rennela2018/index.html
@@ -147,7 +147,8 @@ Conference paper
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style></div>
+<div class=article-style><p>See also the later version: [<a href=../Rennela2020>Rennela2020</a>]</p>
+</div>
 </div>
 </div>
 </div>
