--- a/publication/Rios2021/index.html
+++ b/publication/Rios2021/index.html
@@ -144,7 +144,7 @@ Thesis
 <a class="badge badge-light" href=/bib/tag/Categorical-model/>Categorical model</a>
 <a class="badge badge-light" href=/bib/tag/Quantum-circuit/>Quantum circuit</a>
 <a class="badge badge-light" href=/bib/tag/Proto-Quipper-M/>Proto-Quipper-M</a>
-<a class="badge badge-light" href=/bib/tag/Category-theory/>Category theory</a>
+<a class="badge badge-light" href=/bib/tag/Category-Theory/>Category Theory</a>
 <a class="badge badge-light" href=/bib/tag/Quantum-computing/>Quantum computing</a>
 </div>
 <div class="article-widget content-widget-hr">
