--- a/publication/Staton2015/index.html
+++ b/publication/Staton2015/index.html
@@ -161,6 +161,7 @@ Conference paper
 <ul>
 <li><a href=/bib/publication/Chardonnet2021/>Geometry of Interaction for ZX-Diagrams</a></li>
 <li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
+<li><a href=/bib/publication/Vizzotto2009/>Reasoning about General Quantum Programs over Mixed States</a></li>
 </ul>
 </div>
 </div>
