--- a/publication/index.html
+++ b/publication/index.html
@@ -933,6 +933,37 @@ DOI
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2020">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Rennela2020/>Classical Control, Quantum Circuits and Linear Logic in Enriched Category Theory</a>
+</div>
+<a href=/bib/publication/Rennela2020/ class=summary-link>
+<div class=article-style>
+We describe categorical models of a circuit-based (quantum) functional programming language. We show that enriched categories play a …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Mathys-Rennela/>Mathys Rennela</a></span>, <span>
+<a href=/bib/author/Sam-Staton/>Sam Staton</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Rennela2020/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.23638/LMCS-16%281:30%292020 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2020">
 <div class="media stream-item">
 <div class=media-body>
@@ -2932,6 +2963,38 @@ The study of computational processes based on the laws of quantum mechanics has 
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1017/CBO9781139193313 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2009">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Vizzotto2009/>Reasoning about General Quantum Programs over Mixed States</a>
+</div>
+<a href=/bib/publication/Vizzotto2009/ class=summary-link>
+<div class=article-style>
+In this work we present a functional programming language for quantum computation over mixed states. More interestingly, we develop a …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Juliana-Kaizer-Vizzotto/>Juliana Kaizer Vizzotto</a></span>, <span>
+<a href=/bib/author/Giovani-Rubert-Librelotto/>Giovani Rubert Librelotto</a></span>, <span>
+<a href=/bib/author/Amr-Sabry/>Amr Sabry</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Vizzotto2009/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/978-3-642-10452-7_22 target=_blank rel=noopener>
 DOI
 </a>
 </div>
