--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -129,6 +129,12 @@ We present t$|$ket$\rangle$, a quantum software development platform produced by
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Rennela2020/>Classical Control, Quantum Circuits and Linear Logic in Enriched Category Theory</a></h2>
+<div class=article-style>
+We describe categorical models of a circuit-based (quantum) functional programming language. We show that enriched categories play a crucial role. Following earlier work on QWire by Paykin et al., we consider both a simple first-order linear language …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Mahmoud2019/>Formalization of Metatheory of the Quipper Quantum Programming Language in a Linear Logic</a></h2>
 <div class=article-style>
 We develop a linear logical framework within the Hybrid system and use it to reason about the type system of a quantum lambda calculus. In particular, we consider a practical version of the calculus called Proto-Quipper, which contains the core of …
