--- a/index.html
+++ b/index.html
@@ -289,14 +289,14 @@ So I decided to move the GitHub repo to its own organization and set up this Hug
 </div>
 <div class="col-12 col-lg-8">
 <div class=tag-cloud>
-<a href=/bib/tag/Formal-verification/ style=font-size:1.658055272416068rem>Formal verification</a>
+<a href=/bib/tag/Formal-verification/ style=font-size:1.4837542639282901rem>Formal verification</a>
 <a href=/bib/tag/Program-Proof/ style=font-size:.7rem>Program Proof</a>
-<a href=/bib/tag/Programming-Languages/ style=font-size:1.658055272416068rem>Programming Languages</a>
-<a href=/bib/tag/Quantum-Computation/ style=font-size:.7rem>Quantum Computation</a>
-<a href=/bib/tag/Quantum-computing/ style=font-size:1.658055272416068rem>Quantum computing</a>
+<a href=/bib/tag/Programming-Languages/ style=font-size:1.7634882688316273rem>Programming Languages</a>
+<a href=/bib/tag/Quantum-Computation/ style=font-size:1.1413875116082655rem>Quantum Computation</a>
 <a href=/bib/tag/Quantum-computing/ style=font-size:.7rem>Quantum computing</a>
-<a href=/bib/tag/Quantum-computing/ style=font-size:.7rem>Quantum computing</a>
-<a href=/bib/tag/quantum-programming/ style=font-size:1.239548749062497rem>quantum programming</a>
+<a href=/bib/tag/Quantum-computing/ style=font-size:1.7634882688316273rem>Quantum computing</a>
+<a href=/bib/tag/quantum-programming/ style=font-size:1.1413875116082655rem>quantum programming</a>
+<a href=/bib/tag/Type-Systems/ style=font-size:1.1413875116082655rem>Type Systems</a>
 </div>
 </div>
 </div>
