--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -123,6 +123,12 @@ In quantum computing, the basic unit of information is a qubit. Simulation of a 
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></h2>
+<div class=article-style>
+Q# is a high-level programming language from Microsoft for writing and running quantum programs. Like most industrial languages, it was designed without a formal specification, which can naturally lead to ambiguity in its interpretation. Further, …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Chareton2021/>An Automated Deductive Verification Framework for Circuit-Building Quantum Programs</a></h2>
 <div class=article-style>
 While recent progress in quantum hardware open the door for significant speedup in certain key areas, quantum algorithms are still hard to implement right, and the validation of such quantum programs is a challenge. In this paper we propose Qbricks, …
