--- a/publication/Chardonnet2021/index.html
+++ b/publication/Chardonnet2021/index.html
@@ -159,6 +159,7 @@ Conference paper
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
 <li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
 <li><a href=/bib/publication/Staton2015/>Algebraic Effects, Linearity, and Quantum Programming Languages</a></li>
 <li><a href=/bib/publication/Vizzotto2009/>Reasoning about General Quantum Programs over Mixed States</a></li>
