--- a/publication/Singhal2020b/index.html
+++ b/publication/Singhal2020b/index.html
@@ -155,10 +155,10 @@ Thesis
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
+<li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
 <li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
 <li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
 <li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
-<li><a href=/bib/publication/Rand2020/>Gottesman Types for Quantum Programs</a></li>
 </ul>
 </div>
 </div>
