--- a/publication/Staton2015/index.html
+++ b/publication/Staton2015/index.html
@@ -160,6 +160,7 @@ Conference paper
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Chardonnet2021/>Geometry of Interaction for ZX-Diagrams</a></li>
+<li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
 <li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
 <li><a href=/bib/publication/Vizzotto2009/>Reasoning about General Quantum Programs over Mixed States</a></li>
 </ul>
