--- a/publication/index.html
+++ b/publication/index.html
@@ -306,6 +306,39 @@ arXiv
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a>
+</div>
+<a href=/bib/publication/Singhal2021/ class=summary-link>
+<div class=article-style>
+Q# is a high-level programming language from Microsoft for writing and running quantum programs. Like most industrial languages, it was …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Kartik-Singhal/>Kartik Singhal</a></span>, <span>
+<a href=/bib/author/Sarah-Marshall/>Sarah Marshall</a></span>, <span>
+<a href=/bib/author/Kesha-Hietala/>Kesha Hietala</a></span>, <span>
+<a href=/bib/author/Robert-Rand/>Robert Rand</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Singhal2021/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ks.cs.uchicago.edu/publication/tttiq/ target=_blank rel=noopener>
+URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/bib/publication/Yu2021/>Quantum Abstract Interpretation</a>
 </div>
 <a href=/bib/publication/Yu2021/ class=summary-link>
