deploy: QuantumPL/site@4e870c9b6b36e8d1741d01ea8ea337e15e5b7b58

--- a/index.html
+++ b/index.html
@@ -219,22 +219,17 @@ arXiv
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
-<a href=/bib/author/Anthony-Bordg/>Anthony Bordg</a></span>, <span>
-<a href=/bib/author/Hanna-Lachnitt/>Hanna Lachnitt</a></span>, <span>
-<a href=/bib/author/Yijun-He/>Yijun He</a></span>
+<a href=/bib/author/Robin-Kaarsgaard/>Robin Kaarsgaard</a></span>, <span>
+<a href=/bib/author/Chris-Heunen/>Chris Heunen</a></span>
 </span>
 (2021).
-<a href=/bib/publication/Bordg2021/>Certified Quantum Computation in Isabelle/HOL</a>.
-<em>Journal of Automated Reasoning</em>.
+<a href=/bib/publication/Kaarsgaard2021/>Quantum Information Effects</a>.
 <p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Bordg2021/cite.bib>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Kaarsgaard2021/cite.bib>
 Cite
 </a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/s10817-020-09584-7 target=_blank rel=noopener>
-DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/AnthonyBordg/Isabelle_marries_Dirac target=_blank rel=noopener>
-URL
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2107.12144 target=_blank rel=noopener>
+arXiv
 </a>
 </p>
 </div>
