--- a/publication-type/0/index.html
+++ b/publication-type/0/index.html
@@ -105,6 +105,18 @@ While recent progress in quantum hardware open the door for significant speedup 
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Kaarsgaard2021/>Quantum Information Effects</a></h2>
+<div class=article-style>
+We study the two dual quantum information effects to manipulate the amount of information in quantum computation: hiding and allocation. The resulting type-and-effect system is fully expressive for irreversible quantum computing, including …
+</div>
+</div>
+<div>
+<h2><a href=/bib/publication/Jia2021/>Semantics for Variational Quantum Programming</a></h2>
+<div class=article-style>
+We consider a programming language that can manipulate both classical and quantum information. Our language is type-safe and designed for variational quantum programming, which is a hybrid classical-quantum computational paradigm. The classical …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Chareton2020/>A Deductive Verification Framework for Circuit-Building Quantum Programs</a></h2>
 <div class=article-style>
 While recent progress in quantum hardware open the door for significant speedup in certain key areas, quantum algorithms are still hard to implement right, and the validation of such quantum programs is a challenge. Early attempts either suffer from …
