--- a/publication/index.html
+++ b/publication/index.html
@@ -265,6 +265,71 @@ DOI
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Jia2021/>Semantics for Variational Quantum Programming</a>
+</div>
+<a href=/bib/publication/Jia2021/ class=summary-link>
+<div class=article-style>
+We consider a programming language that can manipulate both classical and quantum information. Our language is type-safe and designed …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Xiaodong-Jia/>Xiaodong Jia</a></span>, <span>
+<a href=/bib/author/Andre-Kornell/>Andre Kornell</a></span>, <span>
+<a href=/bib/author/Bert-Lindenhovius/>Bert Lindenhovius</a></span>, <span>
+<a href=/bib/author/Michael-Mislove/>Michael Mislove</a></span>, <span>
+<a href=/bib/author/Vladimir-Zamdzhiev/>Vladimir Zamdzhiev</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Jia2021/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2107.13347 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Kaarsgaard2021/>Quantum Information Effects</a>
+</div>
+<a href=/bib/publication/Kaarsgaard2021/ class=summary-link>
+<div class=article-style>
+We study the two dual quantum information effects to manipulate the amount of information in quantum computation: hiding and …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Robin-Kaarsgaard/>Robin Kaarsgaard</a></span>, <span>
+<a href=/bib/author/Chris-Heunen/>Chris Heunen</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Kaarsgaard2021/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2107.12144 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2021">
 <div class="media stream-item">
 <div class=media-body>
