--- a/404.html
+++ b/404.html
@@ -107,9 +107,9 @@
 <li><a href=/bib/publication/Chardonnet2021/>Geometry of Interaction for ZX-Diagrams</a></li>
 <li><a href=/bib/post/>Latest News</a></li>
 <li><a href=/bib/post/gh-org-ui/>GitHub Org and Better UI</a></li>
+<li><a href=/bib/publication/Jia2021/>Semantics for Variational Quantum Programming</a></li>
+<li><a href=/bib/publication/Kaarsgaard2021/>Quantum Information Effects</a></li>
 <li><a href=/bib/publication/Zhou2021/>A Quantum Interpretation of Bunched Logic & Quantum Separation Logic</a></li>
-<li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
-<li><a href=/bib/publication/Yu2021/>Quantum Abstract Interpretation</a></li>
 </ul>
 </div>
 </div>
