--- a/publication/Green2010/index.html
+++ b/publication/Green2010/index.html
@@ -152,6 +152,7 @@ Thesis
 <ul>
 <li><a href=/bib/publication/Li2017/>Algorithmic Analysis of Termination Problems for Quantum Programs</a></li>
 <li><a href=/bib/publication/Chareton2021/>An Automated Deductive Verification Framework for Circuit-Building Quantum Programs</a></li>
+<li><a href=/bib/publication/Jia2021/>Semantics for Variational Quantum Programming</a></li>
 <li><a href=/bib/publication/Yu2021/>Quantum Abstract Interpretation</a></li>
 <li><a href=/bib/publication/Ying2017/>Invariants of Quantum Programs: Characterisations and Generation</a></li>
 </ul>
