deploy: QuantumPL/site@e6fbcbd2b3777a80f37884c8f662c31ad79916e0

--- a/publication-type/0/index.html
+++ b/publication-type/0/index.html
@@ -131,7 +131,7 @@ This paper presents an equational theory for the QRAM model of quantum computati
 <div>
 <h2><a href=/bib/publication/Hietala2019/>Verified Optimization in a Quantum Intermediate Representation</a></h2>
 <div class=article-style>
-We present sqire, a low-level language for quantum computing and verification. sqire uses a global register of quantum bits, allowing easy compilation to and from existing `quantum assembly' languages and simplifying the verification process. We …
+We present sqire, a low-level language for quantum computing and verification. sqire uses a global register of quantum bits, allowing easy compilation to and from existing 'quantum assembly' languages and simplifying the verification process. We …
 </div>
 </div>
 <div>
@@ -143,7 +143,7 @@ QHLProver-AFP, formal proof development in Isabelle, supplement to [Liu2019]
 <div>
 <h2><a href=/bib/publication/Mosca2019/>Quantum Programming Languages (Dagstuhl Seminar 18381)</a></h2>
 <div class=article-style>
-This report documents the program and the outcomes of Dagstuhl Seminar 18381 ``Quantum Programming Languages'', which brought together researchers from quantum computing and classical programming languages.
+This report documents the program and the outcomes of Dagstuhl Seminar 18381 \"Quantum Programming Languages\", which brought together researchers from quantum computing and classical programming languages.
 </div>
 </div>
 <div>
