--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -233,7 +233,7 @@ The field of quantum programming languages is developing rapidly and there is a 
 <div>
 <h2><a href=/bib/publication/Selinger2006/>A Lambda Calculus for Quantum Computation with Classical Control</a></h2>
 <div class=article-style>
-In this paper we develop a functional programming language for quantum computers by extending the simply-typed lambda calculus with quantum types and operations. The design of this language adheres to the `quantum data, classical control' paradigm, …
+In this paper we develop a functional programming language for quantum computers by extending the simply-typed lambda calculus with quantum types and operations. The design of this language adheres to the 'quantum data, classical control' paradigm, …
 </div>
 </div>
 <div>
