--- a/publication/index.html
+++ b/publication/index.html
@@ -1208,7 +1208,7 @@ DOI
 </div>
 <a href=/bib/publication/Unruh2019a/ class=summary-link>
 <div class=article-style>
-Quantum Hoare logic allows us to reason about quantum programs. We present an extension of quantum Hoare logic that introduces ``ghost …
+Quantum Hoare logic allows us to reason about quantum programs. We present an extension of quantum Hoare logic that introduces …
 </div>
 </a>
 <div class="stream-meta article-metadata">
@@ -1406,7 +1406,7 @@ arXiv
 </div>
 <a href=/bib/publication/Mosca2019/ class=summary-link>
 <div class=article-style>
-This report documents the program and the outcomes of Dagstuhl Seminar 18381 ``Quantum Programming Languages'', which brought together …
+This report documents the program and the outcomes of Dagstuhl Seminar 18381 "Quantum Programming Languages", which brought …
 </div>
 </a>
 <div class="stream-meta article-metadata">
@@ -2185,7 +2185,7 @@ DOI
 </div>
 <a href=/bib/publication/Paykin2017/ class=summary-link>
 <div class=article-style>
-This paper introduces QWIRE (``choir''), a language for defining quantum circuits and an interface for manipulating them inside of an …
+This paper introduces QWIRE ("choir"), a language for defining quantum circuits and an interface for manipulating them inside …
 </div>
 </a>
 <div class="stream-meta article-metadata">
